# cjs

./: .gitignore  COPYING  Makefile-gjs-dbus.am  Makefile-insttest.am  Makefile-modules.am  Makefile-test.am  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  autogen.sh  cjs-1.0.pc.in  cjs-dbus-1.0.pc.in  cjs-internals-1.0.pc.in  config.h.in  configure  configure.ac  gjs-srcs.mk  js.gresource.xml  meson.build  meson_options.txt  verbump.py
.github/workflows/: build.yml
cjs/: atoms.cpp  atoms.h  byteArray.c  byteArray.cpp  byteArray.h  cjs.stp.in  cjs_pch.hh  compat.h  console.c  console.cpp  context-private.h  context.c  context.cpp  context.h  coverage.cpp  coverage.h  debugger.cpp  deprecation.cpp  deprecation.h  engine.cpp  engine.h  error-types.cpp  error-types.h  gerror-result.h  gi.c  gi.cpp  gi.h  gjs-module.h  gjs.h  gjs_pch.hh  global.cpp  global.h  guri.c  importer.c  importer.cpp  importer.h  internal.cpp  internal.h  jsapi-class.h  jsapi-dynamic-class.cpp  (+26 more)
cjs-dbus/: dbus-private.h  dbus.c
debian/: changelog  cjs-tests.install  cjs-tests.lintian-overrides  cjs.lintian-overrides  clean  control  control.in  copyright  gbp.conf  libcjs-dev.install  libcjs0.acc.in  libcjs0.symbols  libcjs0c.install  libcjs0f.install  libcjs0f.symbols  libcjs0g.lintian-overrides  libcjs0g.symbols  libgjs-dev.install  libgjs0c.install  not-installed  rules  shlibs.local  watch  watch.devel
debian/tests/: acc  build  control  installed-tests  testsuite
debian/upstream/: metadata
doc/: CPP_Style_Guide.md  Hacking.md  Logging.md
examples/: README  dbus-client.js  dbus-service.js  gtk-application.js  webkit.js
gi/: arg-cache.cpp  arg-cache.h  arg-inl.h  arg.c  arg.cpp  arg.h  boxed.c  boxed.cpp  boxed.h  cjs_gi_trace.h  closure.c  closure.cpp  closure.h  cwrapper.cpp  cwrapper.h  enumeration.c  enumeration.cpp  enumeration.h  foreign.c  foreign.cpp  foreign.h  function.c  function.cpp  function.h  fundamental.cpp  fundamental.h  gerror.c  gerror.cpp  gerror.h  gobject.cpp  gobject.h  gtype.c  gtype.cpp  gtype.h  info.h  interface.c  interface.cpp  interface.h  js-value-inl.h  keep-alive.c  (+28 more)
gjs/: atoms.cpp  context.h  coverage.cpp  coverage.h  debugger.cpp  deprecation.cpp  engine.cpp  error-types.cpp  global.cpp  guri.h  importer.c  importer.cpp  internal.cpp  jsapi-class.h  jsapi-util-root.h  jsapi-util-string.cpp  native.h  profiler-private.h  profiler.cpp  unit-test-utils.c
installed-tests/: debugger-test.sh  gjs-unit.cpp  meson.build  minijasmine.cpp  script.test.in
installed-tests/extra/: gjs.supp
installed-tests/js/: complex.ui  jsunit.gresources.xml  meson.build  minijasmine.js  org.cinnamon.CjsTest.gschema.xml  org.gnome.CjsTest.gschema.xml  testAsyncMainloop.js  testByteArray.js  testCoverage.js  testESModules.js  testEncoding.js  testEverythingBasic.js  testExceptions.js  testGDBus.js  testGIMarshalling.js  testGLib.js  testGObjectClass.js  testGObjectDestructionAccess.js  testGObjectInterface.js  testGio.js  testGtk.js  testGtk3.js  testGtk4.js  testImporter.js  testImporter2.js  testIntrospection.js  testLegacyByteArray.js  testLegacyGObject.js  testLegacyGtk.js  testPackage.js  testPromise.js  testRegress.js  testSignals.js  testSystem.js
installed-tests/js/libgjstesttools/: gjs-test-tools.cpp  meson.build
installed-tests/js/modules/subA/subB/: __init__.js
installed-tests/scripts/: common.sh  testCommandLine.sh  testCommandLineModules.sh  testGtk4Warnings.sh  testWarnings.sh
libgjs-private/: gjs-gdbus-wrapper.cpp  gjs-gdbus-wrapper.h  gjs-match-info.h  gjs-util.c  gjs-util.h
modules/: _legacy.js  _lie.js  cairo-context.c  cairo-context.cpp  cairo-gradient.c  cairo-gradient.cpp  cairo-image-surface.c  cairo-image-surface.cpp  cairo-linear-gradient.c  cairo-linear-gradient.cpp  cairo-module.h  cairo-path.c  cairo-path.cpp  cairo-pattern.c  cairo-pattern.cpp  cairo-pdf-surface.c  cairo-pdf-surface.cpp  cairo-private.h  cairo-ps-surface.c  cairo-ps-surface.cpp  cairo-radial-gradient.c  cairo-radial-gradient.cpp  cairo-region.cpp  cairo-solid-pattern.c  cairo-solid-pattern.cpp  cairo-surface-pattern.c  cairo-surface-pattern.cpp  cairo-surface.c  cairo-surface.cpp  cairo-svg-surface.c  cairo-svg-surface.cpp  cairo.c  cairo.cpp  console.c  console.cpp  console.h  coverage.js  dbus-exports.c  dbus-values.c  dbus-values.h  (+18 more)
modules/_bootstrap/: coverage.js
modules/core/: _format.js  _gettext.js
modules/core/overrides/: GLib.js  GObject.js  Gio.js  Gtk.js
modules/esm/: console.js
modules/internal/: loader.js
modules/overrides/: GObject.js  Gio.js  Gtk.js
modules/script/: package.js
modules/tweener/: tweenList.js  tweener.js
subprojects/gobject-introspection-tests/: .clang-format  .editorconfig  .gitlab-ci.yml  COPYING  COPYING.GPL  COPYING.LGPL  README.md  annotation.c  annotation.h  drawable.c  drawable.h  foo.c  foo.h  gimarshallingtests.c  gimarshallingtests.h  gimarshallingtestsextra.c  gimarshallingtestsextra.h  gitestmacros.h  gobject-introspection-tests.doap  meson.build  meson_options.txt  regress-unix.c  regress-unix.h  regress.c  regress.h  regressextra.c  regressextra.h  utility.c  utility.h  warnlib.c  warnlib.h
subprojects/gobject-introspection-tests/.reuse/: dep5
subprojects/gobject-introspection-tests/docs/: provenance.txt
subprojects/gobject-introspection-tests/tools/: iwyu.imp  run_clang_format.sh  run_iwyu.sh
test/: check-headers.sh  check-pch.sh  gjs-test-call-args.cpp  gjs-test-common.cpp  gjs-test-common.h  gjs-test-coverage.cpp  gjs-test-jsapi-utils.cpp  gjs-test-rooting.cpp  gjs-test-toggle-queue.cpp  gjs-test-utils.cpp  gjs-test-utils.h  gjs-tests.cpp  gjs-unit.c  meson.build  mock-js-resources.gresource.xml  run-with-dbus
test/js/: testGDBus.js
tools/: gjs-public-iwyu.imp  heapdot.py  process_iwyu.py  run_coverage.sh  run_iwyu.sh
util/: console.cpp  console.h  error.h  log.cpp
win32/: build-rules-msvc.mak  config-msvc.mak  create-lists-msvc.mak  generate-msvc.mak  gjs-introspection-msvc.mak  install.mak
